fix  the nav height and algin the nav when collapse under the logo

--- a/style.css
+++ b/style.css
@@ -8,14 +8,16 @@ html,body{
 h1{
     margin: 0px;;
     font-size: 28px;
+    color: #444;
 }
 
 #header{
     width: 100%;
-    padding: 1px 0px;
+    padding-bottom: 7px;
     box-sizing: border-box;
     background: #fff;
     position: fixed;
+    
     box-shadow: 0 0 4px rgba(0,0,0,0.4);
     z-index: 5;
 
@@ -38,8 +40,7 @@ h1{
     flex-shrink: 2;
    width: 40%;
     box-sizing: border-box;
-  
-   padding:5px;
+    
     justify-content: center;
     
    
@@ -67,7 +68,7 @@ h1{
     display:flex;
     
    margin-left: auto;
-   margin-right: 5%;
+   margin-right: 15%;
    font-family: Arial, Helvetica, sans-serif;
     padding :0px;
   
@@ -77,8 +78,9 @@ h1{
 .nav-ul li{
     font-weight: normal;
     text-transform: uppercase;
-    padding-top: 15px;
+    align-self: center;
     font-size: 14px;
+    padding-top: 10px;
     margin-right: 5%;
     text-transform: uppercase;
 }
@@ -101,14 +103,25 @@ h1{
 @media screen and (max-width:951px){
     .left-header{
        /* background-color: red;*/
+      
        width: 25%;
+       justify-content: flex-end;
     }
     #right-header{
+        
+        justify-content: flex-start;
         width:75% ;
     }
     .nav-ul {
-        margin-right: 0px;
-        justify-content: flex-end;
+        
+         
+        justify-content: flex-start;
+    }
+    #f{
+        margin-right: auto;  /*due to lack of space we move the navbar to right*/
+    }
+    .nav-ul  #contact{  /* and make some space to the left */
+        margin-left: 5%;
     }
 }
 
@@ -145,12 +158,14 @@ h1{
     .container{
         flex-wrap: wrap ;
     }
-   .nav-ul li{
-        margin-left:10% ;
+   .nav-ul li{   /*to align the nav under the log */
+        margin-left:10% ;  /*to make some space to the right bettwen the window and the nav*/
+        margin-right: auto; 
     }
-    .nav-ul #contact{
-        margin-left:10% ;
-    }
+   .nav-ul #contact{
+    margin-left:10% ;   /*reset the value margin of contact to 10%*/
+   }
+    
   
     #toggle:checked + * .nav-ul {
         display:flex ;
@@ -158,6 +173,7 @@ h1{
         flex-direction: column;
 
     }
+  
 }
    
 #toggle{
